java - refactor to SolutionBase